clusters/production/apps/mosquitto-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mosquitto-production
  labels:
    app.kubernetes.io/part-of: production
    pbs.wsh.no/encryption-keyfile: "true"
